--- a/cardinal-mockup/src/scss/layout/work.scss
+++ b/cardinal-mockup/src/scss/layout/work.scss
@@ -119,9 +119,9 @@
             div {
                 width: 40%;
                 height: 40%;
-                margin: 20px 0 0 25px;
+                margin: 5% 0 0 25px;
                 p {
-                    margin: 10px 100px 10px auto;
+                    margin: 10px auto;
                 }
                 button {
                     padding: 10px 15px;
@@ -145,7 +145,7 @@
             div {
                 width: 35%;
                 height: 30%;
-                margin: 60px 0 0 60px;
+                margin: 9% 0 0 60px;
                 h3 {
                     margin: 0 auto 5px 0;
                 }
@@ -166,9 +166,12 @@
                 margin: -50px 0 0 -75px;
             }
             div {
-                width: 50%;
+                width: 40%;
                 height: 50%;
-                margin: 0 0 0 20px;
+                margin: 2% 0 0 70px;
+                h3 {
+                    margin: 0 auto 2px auto;
+                }
                 p {
                     margin: 10px auto;
                 }
@@ -190,7 +193,7 @@
         }
         .work-gojo {
             div {
-                margin: 60px 0 0 25px;
+                margin: 8% 0 0 25px;
                 p {
                     margin: 10px 150px 10px auto;
                 }
@@ -202,7 +205,7 @@
         }
         .work-fifththird {
             div {
-                margin: 140px 0 0 120px;
+                margin: 12% 0 0 120px;
                 p {
                     margin: 10px auto 10px auto;
                 }
@@ -215,7 +218,7 @@
             div {
                 width: 30%;
                 height: 30%;
-                margin: 20px 0 0 80px;
+                margin: 4% 0 0 80px;
             }
         }
     }
@@ -241,7 +244,7 @@
         }
         .work-gojo {
             div {
-                margin: 80px 0 0 25px;
+                margin: 6% 0 0 25px;
                 p {
                     margin: 20px auto;
                 }
@@ -281,18 +284,18 @@
     .work {
         .work-gojo {
             div {
-                margin: 120px 0 0 25px;
+                margin: 9% 0 0 25px;
             }
         }
         .work-fifththird {
             div {
-                margin: 200px 0 0 60px;
+                margin: 13% 0 0 60px;
             }
         }
         .work-chhn {
             margin: -150px 0 0 0;
             div {
-                margin: 40px 0 0 80px;
+                margin: 5% 0 0 80px;
             }
         }
     }
