--- a/cardinal-mockup/src/scss/Home.css
+++ b/cardinal-mockup/src/scss/Home.css
@@ -204,17 +204,17 @@ Media Queries
       .solutions div article {
         text-align: left;
         padding: 15px 0;
-        margin: 0 1.5%; }
+        margin: 0 1%; }
         .solutions div article img {
-          width: 1.4em;
+          width: 1.5em;
           float: left; }
         .solutions div article h3 {
-          font-size: 1.05em;
+          font-size: 1.2em;
           margin: 0 0 12px 30px; }
         .solutions div article p {
           margin: 0 0 0 30px; }
         .solutions div article .ba {
-          width: 1.2em; } }
+          width: 1.1em; } }
 
 @media (min-width: 1200px) {
   .solutions {
@@ -222,7 +222,7 @@ Media Queries
     .solutions div article {
       text-align: left;
       padding: 25px 0;
-      margin: 0 1%; }
+      margin: 0 2.5%; }
       .solutions div article img {
         width: 2.5em;
         float: left; }
@@ -312,7 +312,7 @@ Media Queries
     margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 160px 160px;
+    grid-template-rows: 170px 170px;
     grid-gap: 10px 15px;
     padding: 0;
     margin: -60px auto 40px auto; }
@@ -326,13 +326,15 @@ Media Queries
       grid-column-end: 3;
       line-height: 1.1em;
       text-align: left;
-      padding: 30px 0; }
+      padding: 6% 0 0 0; }
       .clients .clients-container .client-info h3 {
         width: 80%;
-        margin: 0 auto 15px auto; }
+        margin: 0 auto 15px auto;
+        font-size: 1.2em; }
       .clients .clients-container .client-info p {
         width: 80%;
-        font-size: .7em; }
+        font-size: 0.85em;
+        line-height: 1.5em; }
     .clients .clients-container .client-logo {
       width: 100%;
       margin: 0; }
@@ -350,13 +352,10 @@ Media Queries
         max-width: 50%; } }
 
 @media (min-width: 992px) {
-  .clients .clients-container .client-info {
-    padding: 22px 0; }
-    .clients .clients-container .client-info h3 {
-      font-size: 1.1em; }
-    .clients .clients-container .client-info p {
-      font-size: 0.85em;
-      line-height: 1.5em; } }
+  .clients .clients-container {
+    grid-template-rows: 190px 190px; }
+    .clients .clients-container .client-info {
+      padding: 8% 0; } }
 
 @media (min-width: 1200px) {
   .clients {
@@ -368,7 +367,7 @@ Media Queries
       .clients .clients-container .client-info {
         line-height: 1.7em;
         text-align: left;
-        padding: 60px 0 0 0; }
+        padding: 10% 0 0 0; }
         .clients .clients-container .client-info h3 {
           font-size: 1.6em;
           margin: 0 auto 25px auto; }
@@ -534,9 +533,9 @@ Media Queries
     .work .work-gojo div {
       width: 40%;
       height: 40%;
-      margin: 20px 0 0 25px; }
+      margin: 5% 0 0 25px; }
       .work .work-gojo div p {
-        margin: 10px 100px 10px auto; }
+        margin: 10px auto; }
       .work .work-gojo div button {
         padding: 10px 15px;
         font-size: .7em; }
@@ -555,7 +554,7 @@ Media Queries
     .work .work-fifththird div {
       width: 35%;
       height: 30%;
-      margin: 60px 0 0 60px; }
+      margin: 9% 0 0 60px; }
       .work .work-fifththird div h3 {
         margin: 0 auto 5px 0; }
       .work .work-fifththird div p {
@@ -571,9 +570,11 @@ Media Queries
       height: 50%;
       margin: -50px 0 0 -75px; }
     .work .work-chhn div {
-      width: 50%;
+      width: 40%;
       height: 50%;
-      margin: 0 0 0 20px; }
+      margin: 2% 0 0 70px; }
+      .work .work-chhn div h3 {
+        margin: 0 auto 2px auto; }
       .work .work-chhn div p {
         margin: 10px auto; } }
 
@@ -584,14 +585,14 @@ Media Queries
     padding: 10px 20px;
     font-size: 0.85em; }
   .work .work-gojo div {
-    margin: 60px 0 0 25px; }
+    margin: 8% 0 0 25px; }
     .work .work-gojo div p {
       margin: 10px 150px 10px auto; }
     .work .work-gojo div button {
       padding: 10px 20px;
       font-size: 0.85em; }
   .work .work-fifththird div {
-    margin: 140px 0 0 120px; }
+    margin: 12% 0 0 120px; }
     .work .work-fifththird div p {
       margin: 10px auto 10px auto; }
   .work .work-chhn img {
@@ -599,7 +600,7 @@ Media Queries
   .work .work-chhn div {
     width: 30%;
     height: 30%;
-    margin: 20px 0 0 80px; } }
+    margin: 4% 0 0 80px; } }
 
 @media (min-width: 1200px) {
   .work article h3 {
@@ -613,7 +614,7 @@ Media Queries
     padding: 15px 35px;
     font-size: 1.1em; }
   .work .work-gojo div {
-    margin: 80px 0 0 25px; }
+    margin: 6% 0 0 25px; }
     .work .work-gojo div p {
       margin: 20px auto; }
     .work .work-gojo div button {
@@ -634,13 +635,13 @@ Media Queries
 
 @media (min-width: 1330px) {
   .work .work-gojo div {
-    margin: 120px 0 0 25px; }
+    margin: 9% 0 0 25px; }
   .work .work-fifththird div {
-    margin: 200px 0 0 60px; }
+    margin: 13% 0 0 60px; }
   .work .work-chhn {
     margin: -150px 0 0 0; }
     .work .work-chhn div {
-      margin: 40px 0 0 80px; } }
+      margin: 5% 0 0 80px; } }
 
 @font-face {
   font-family: Effra-Light;
