--- a/cardinal-mockup/src/scss/layout/clients.css
+++ b/cardinal-mockup/src/scss/layout/clients.css
@@ -73,7 +73,7 @@ Media Queries
     margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 160px 160px;
+    grid-template-rows: 170px 170px;
     grid-gap: 10px 15px;
     padding: 0;
     margin: -60px auto 40px auto; }
@@ -87,13 +87,15 @@ Media Queries
       grid-column-end: 3;
       line-height: 1.1em;
       text-align: left;
-      padding: 30px 0; }
+      padding: 6% 0 0 0; }
       .clients .clients-container .client-info h3 {
         width: 80%;
-        margin: 0 auto 15px auto; }
+        margin: 0 auto 15px auto;
+        font-size: 1.2em; }
       .clients .clients-container .client-info p {
         width: 80%;
-        font-size: .7em; }
+        font-size: 0.85em;
+        line-height: 1.5em; }
     .clients .clients-container .client-logo {
       width: 100%;
       margin: 0; }
@@ -111,13 +113,10 @@ Media Queries
         max-width: 50%; } }
 
 @media (min-width: 992px) {
-  .clients .clients-container .client-info {
-    padding: 22px 0; }
-    .clients .clients-container .client-info h3 {
-      font-size: 1.1em; }
-    .clients .clients-container .client-info p {
-      font-size: 0.85em;
-      line-height: 1.5em; } }
+  .clients .clients-container {
+    grid-template-rows: 190px 190px; }
+    .clients .clients-container .client-info {
+      padding: 8% 0; } }
 
 @media (min-width: 1200px) {
   .clients {
@@ -129,7 +128,7 @@ Media Queries
       .clients .clients-container .client-info {
         line-height: 1.7em;
         text-align: left;
-        padding: 60px 0 0 0; }
+        padding: 10% 0 0 0; }
         .clients .clients-container .client-info h3 {
           font-size: 1.6em;
           margin: 0 auto 25px auto; }
