--- a/cardinal-mockup/src/scss/layout/solutions.scss
+++ b/cardinal-mockup/src/scss/layout/solutions.scss
@@ -93,7 +93,7 @@
             article {
                 @include align-left;
                 padding: 25px 0;
-                margin: 0 2.5%;
+                margin: 0 1%;
                 img {
                     width: 2.5em;
                     float: left;
@@ -111,6 +111,16 @@
                 .ba {
                     width: 2.1em;
                 }
+            }
+        }
+    }
+}
+
+@include large-desktop {
+    .solutions {
+        div {
+            article {
+                margin: 0 2%;
             }
         }
     }
